<resources>
    <string name="app_name">AccountView</string>
    <string name="action_settings">Settings</string>
    <string name="shared_pref_file">account-view-sp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_select_label">Date:</string>
    <string name="balance_selector_label">Balance:</string>
    <string name="balance_selector_hint">Enter Balance</string>
    <string name="balance_add_text">Add</string>
    <string name="date_selector_hint">Enter Date</string>
    <string name="graph_balance_label">balance</string>
    <string name="new_balance_toolbar_text">New Balance</string>
    <string name="balance_summary_label_text">Balance:</string>
    <string name="login_button_text">Login</string>
</resources>
