<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/date_selector_top_bot_margin"
            android:layout_marginTop="@dimen/date_selector_top_bot_margin"
            android:text="@string/date_select_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/date_select_font_size" />

        <EditText
            android:id="@+id/date_input"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_selector_hint"
            android:inputType="date"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_selector_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/balance_select_font_size"/>

        <EditText
            android:id="@+id/balance_input"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance_selector_hint"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/balance_add_text" />

</RelativeLayout>